# domjudge-testcase-tools

./: LICENSE  README.md  install.sh  pyproject.toml
src/: testcase-help.py  testcase-tools.py
test/: testfile.txt
test/test2/: testfile2.txt
testcase_tools/: add_testcase.py  generate_verify.py  main.py  misc.py  normalization.py  package_problem.py
