[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "testcase-tools"
version = "0.1.3"
description = "toolkit for managing domjudge problems and testcases"
authors = [
  { name = "x3nom", email = "jakub.p12345678910@gmail.com" }
]
dependencies = ["chardet"]
requires-python = ">=3.8"

[project.scripts]
testcase-tools = "testcase_tools.main:main"

[project.urls]
Source = "https://github.com/delta-cs/domjudge-testcase-tools"
